security_group.tf
resource "aws_security_group" "trabalho_tf_sg" {
  name        = "trabalho_tf_sg"
  description = "Security group Trabalho TF"
  vpc_id      = aws_vpc.trabalho_tf_vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Trabalho-TF-sg"
  }
}
